WexGit/Wex_DX/force-app/main/default/objects/Moodys_CreditLens_Mapping__mdt/Moodys_CreditLens_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Field mapping for Moody&apos;s CreditLens integration</description>
    <label>Moody&apos;s CreditLens Mapping</label>
    <pluralLabel>Moody&apos;s CreditLens Mapping</pluralLabel>
</CustomObject>