WexGit/Wex_DX/force-app/main/default/objects/Moodys_CreditLens_Mapping__mdt/fields/countryKey__c.field-meta.xml
<CustomField>
    <fullName>countryKey__c</fullName>
    <description>Moody&apos;s Country Key - Example: CAN for Canada</description>
    <label>countryKey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABW</fullName>
            </value>
            <value>
                <fullName>AFG</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AIA</fullName>
            </value>
            <value>
                <fullName>ALA</fullName>
            </value>
            <value>
                <fullName>ALB</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>ARE</fullName>
                <isActive>false</isActive>
                <label>ARE</label>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>ATA</fullName>
            </value>
            <value>
                <fullName>ATF</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>AZE</fullName>
            </value>
            <value>
                <fullName>BDI</fullName>
            </value>
            <value>
                <fullName>BEL</fullName>
            </value>
            <value>
                <fullName>BEN</fullName>
            </value>
            <value>
                <fullName>BES</fullName>
            </value>
            <value>
                <fullName>BFA</fullName>
            </value>
            <value>
                <fullName>BGD</fullName>
            </value>
            <value>
                <fullName>BGR</fullName>
            </value>
            <value>
                <fullName>BHR</fullName>
            </value>
            <value>
                <fullName>BHS</fullName>
            </value>
            <value>
                <fullName>BIH</fullName>
            </value>
            <value>
                <fullName>BLM</fullName>
            </value>
            <value>
                <fullName>BLR</fullName>
            </value>
            <value>
                <fullName>BLZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>