WexGit/Wex_DX/force-app/main/default/objects/Moodys_CreditLens_Mapping__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Maps to the &quot;key&quot; in a moody&apos;s field</description>
    <label>Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>