WexGit/Wex_DX/force-app/main/default/objects/Moodys_CreditLens_Mapping__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Maps to the &quot;value&quot; in a moody&apos;s field</description>
    <label>Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>